# MySoul.SKILL

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_en-US.md  README_ja-JP.md  README_zh-CN.md  SECURITY.md  SKILL.md
.forgithub/docs/: AddIdea.md  AddUsage.md
SKILL/: SKILL.md  consistency-guide.md  extraction-rules.md  memory-guide.md
docs/: README.md
sdk/javascript/: jest.config.js  package-lock.json  package.json
sdk/javascript/src/: build.ts  chat.ts  client.ts  data.ts  errors.ts  index.ts  project.ts  types.ts
sdk/python/: pyproject.toml
sdk/python/myoul/: __init__.py  build.py  chat.py  client.py  data.py  exceptions.py  project.py  types.py
tools/: anonymize-data.md  buildNewSoul.cmd  buildNewSoul.sh  check-consistency.md  meta.schema.json  validate-data.md
web/: index.html  package.json
web/src/: App.tsx  index.css
web/src/components/: Layout.tsx
web/src/pages/: Home.tsx  ProjectDetail.tsx  Projects.tsx
web/src/services/: api.ts
